# zephyr-sdk-pthread-toolchain

./: .clang-tidy  .gitignore  .project  README.md
cmake/: ClangdSetup.cmake  clangd.in
doc/: Zephyr-PosixAndCppSupport.md  Zephyr-SDK-Build.md  Zephyr-Setup.md
doc/zephyr-pthread-issue/: pthread_throw_pthread_self_to_posix_thread_err.txt  pthread_throw_pthread_setspecific_err.txt
etc/: clang-format-jau
include/inject/zephyr/: pthread.h
include/util/: miscutils.hpp
samples/cpp_atomic_mm/: .cproject
samples/cpp_atomic_mm/src/: main.cpp
samples/cpp_atomic_pong/: .cproject  .project
samples/cpp_atomic_pong/src/: main.cpp
samples/cpp_exceptions/: .clang-format  .cproject  .project
samples/cpp_exceptions/src/: main.cpp
samples/cpp_pthread_kthread/: CMakeLists.txt
samples/cpp_pthread_kthread/src/: main.cpp
samples/cpp_pthread_specific/: .project  prj.conf
samples/cpp_pthread_specific/src/: main.cpp
samples/cpp_pthreads/: .cproject  .project
samples/cpp_pthreads/src/: main.cpp
samples/cpp_stlthreads/: .cproject  .project
samples/cpp_stlthreads/src/: main.cpp
samples/scripts/: build-always.sh  build-rebuild.sh  build-run.sh  gdb-client.sh  gdb-cmds00.txt  gdb-cmds01.txt  gdb-server.sh  zephyrenv-4.4.0.sh  zephyrenv-main.sh
scripts/: build.sh  config-aarch64-zephyr-elf.sh  config-arm-zephyr-eabi.sh  config-cpu-os-abi.sh  functions.sh  gdb-client.sh  gdb-cmds00.txt  install-aarch64-zephyr-elf.sh  install-cpu-os-abi.sh  install-prerequisites.sh  setenv-run.sh  setenv.sh  twister.sh
sections/: aarch64-zephyr-elf.config  arm-zephyr-eabi.config  common.config  riscv64-zephyr-elf.config  x86_64-zephyr-elf.config
src/: miscutils.cpp
tests/: test_config.yaml
tests/cpp/: CMakeLists.txt  test_config.yaml  testcase.yaml
tests/cpp/basic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cpp/basic/src/: alloc_new.cpp  magic_statics.cpp
tests/cpp/concurrency/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cpp/concurrency/src/: cpp_exceptions.cpp
tests/cpp_pthread/: prj.conf  testcase.yaml
tests/cpp_pthread/src/: cpp_exceptions.cpp  stl_threads01.cpp
tests/posix_pthread/: CMakeLists.txt  testcase.yaml
tests/posix_pthread/src/: pthread.c  pthread_kthread.c  pthread_specific.c  pthread_threads01.c
tests/pthread/: prj.conf  testcase.yaml
tests/pthread/src/: pthread.c  pthread_kthread.c  pthread_once.c  pthread_specific.c
